# WACO

./: CMakeLists.txt  README.md  package.xml  waco_data.py
cfg/: heuristics_params.yaml  trajectory.yaml  waco_params.yaml
cfg/tmp/: heuristics_params_0.yaml  heuristics_params_1.yaml  heuristics_params_2.yaml  heuristics_params_3.yaml  heuristics_params_4.yaml
include/: csv.h  cuda_functions.h  cuda_utilities.h  cuda_vector.h  ikfast.h  positioner.cu  roswacocuda.h  save_data.h
launch/: .itia_ros_wacocuda.launch.swn  .itia_ros_wacocuda.launch.swo  itia_ros_wacocuda.launch  itia_ros_wacocuda_bkp.launch  itia_ros_wacocuda_debug.launch  itia_ros_wacocuda_test.launch  simulate_results.launch
output/asola_tubo_storto_51/10_100_1024_50_1.000000_1_1/27-05-2019-10-34-55/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_1.000000_1_1/27-05-2019-10-37-01/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_1.000000_1_1/27-05-2019-10-40-52/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_1.000000_1_1/27-05-2019-10-45-21/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt
output/asola_tubo_storto_51/10_100_1024_50_1.000000_1_1/27-05-2019-10-47-20/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_16/23-05-2019-20-28-41/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_16/23-05-2019-20-31-24/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_16/23-05-2019-20-34-00/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_16/23-05-2019-20-36-53/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_16/23-05-2019-20-39-16/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_8/23-05-2019-20-19-20/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_8/23-05-2019-20-20-44/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_8/23-05-2019-20-22-13/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_8/23-05-2019-20-24-07/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_4_8/23-05-2019-20-26-12/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_16/23-05-2019-20-53-31/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_16/23-05-2019-20-56-36/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_16/23-05-2019-20-59-57/: Robot.txt  fobj_history.txt  positioner.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_16/23-05-2019-21-03-32/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_16/23-05-2019-21-06-48/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_8/23-05-2019-20-41-03/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_8/23-05-2019-20-43-03/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_8/23-05-2019-20-44-59/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_8/23-05-2019-20-47-13/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_100_1024_50_30.000000_5_8/23-05-2019-20-49-17/: Robot.txt  fobj_history.txt  positioner.txt
output/asola_tubo_storto_51/10_150_1024_50_1.000000_1_1/27-05-2019-10-50-26/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_150_1024_50_1.000000_1_1/27-05-2019-10-54-11/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_150_1024_50_1.000000_1_1/27-05-2019-10-58-29/: Robot.txt  fobj_history.txt  positioner.txt  score.txt
output/asola_tubo_storto_51/10_150_1024_50_1.000000_1_1/27-05-2019-11-02-48/: Robot.txt  fobj_history.txt  positioner.txt
output/asola_tubo_storto_51/10_150_1024_50_1.000000_1_1/27-05-2019-11-06-00/: Robot.txt  fobj_history.txt  positioner.txt
output/asola_tubo_storto_51/10_150_1024_50_30.000000_4_16/23-05-2019-21-24-37/: Robot.txt  execution_time.txt  fobj_history.txt  positioner.txt  score.txt
rviz/: show_settings.rviz
src/: collisions.cu  cuda_functions.cu  debug_coll_posit_env.cu  debug_tool_workpiece_collision.cu  positioner_debug.cu  positioner_robot.cu  preview_voxelized.cu  roswacocuda.cu  save_data.cu  show_trajectory.cu  tool_robot.cu
(+1522 files in other folders)
